EME: Fail if unsupported sessionTypes are provided

BUG=654040
TEST=modified EME layout test passes

Review-Url: https://codereview.chromium.org/2414983002
Cr-Commit-Position: refs/heads/master@{#425144}

Former-commit-id: e150afdd8808dad8c4298d2003c8f946b959d962